Change package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name" : "monext/payline-sdk",
+	"name" : "spottt/payline-sdk",
 	"description" : "Payline library for PHP",
 	"keywords" : [
 		"Monext",
